[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "A lock-free, wait-free, block-free logger for the ARM Cortex-M architecture"
documentation = "https://docs.rs/cortex-m-funnel"
edition = "2018"
keywords = ["ARM", "Cortex-M", "logging", "log"]
license = "MIT OR Apache-2.0"
name = "cortex-m-funnel"
readme = "README.md"
repository = "https://github.com/japaric/cortex-m-funnel"
version = "0.1.0-alpha.1"

[lib]
name = "funnel"

[dependencies]
cortex-m-funnel-macros = { path = "macros", version = "0.1.0-alpha.1" }
ufmt = "0.1.0"

[features]
max_level_debug = []
max_level_error = []
max_level_info = []
max_level_off = []
max_level_trace = []
max_level_warn = []
release_max_level_debug = []
release_max_level_error = []
release_max_level_info = []
release_max_level_off = []
release_max_level_trace = []
release_max_level_warn = []

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["example"]