[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "example"
publish = false
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.3.1"
cortex-m = "0.6.1"
cortex-m-funnel = { path = ".." }
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
lm3s6965 = "0.1.3"
panic-halt = "0.2.0"
panic-never = "0.1.0"
ufmt = "0.1.0"